# A-sentence-reading

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  COMMENTING.md  PRODUCT.md  RESEARCH.md  UX.md
docs/design/: 00-milestones.md  01-data-model.md  02-pdf-extract.md  03-sentence-split.md  04-api-contract.md  05-session-store.md  06-ui-states.md  07-typography-tokens.md  08-errors.md  09-testing.md  10-security-limits.md  11-figure-collapse.md  12-gemini-debone.md  13-rich-text-two-pass.md  14-vision-ocr-router.md  15-tts-and-gestures.md  16-sentence-notes.md  README.md
scripts/: ensure_server.ps1  register_autostart.ps1
src/sentence_reading/: __init__.py  autostart.py  models.py
src/sentence_reading/api/: app.py
src/sentence_reading/cache/: __init__.py  paper_cache.py
src/sentence_reading/docx/: __init__.py  extract.py
src/sentence_reading/llm/: __init__.py  debone.py  env.py  extract_quality.py  richtext.py  tts.py  tts_speak.py  typography.py  vision_ocr.py
src/sentence_reading/pdf/: __init__.py  extract.py  sentences.py
src/sentence_reading/static/: app.js  index.html  styles.css  veil.html
